WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265384
Invalidate rebuild root renderer on child node removal
https://bugs.webkit.org/show_bug.cgi?id=265384
Summary
Invalidate rebuild root renderer on child node removal
Antti Koivisto
Reported
2023-11-27 08:30:43 PST
If a child of a rebuild root is removed we need to invalidate it for rebuild.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-27 08:31:15 PST
<
rdar://problem/118834858
>
Antti Koivisto
Comment 2
2023-11-27 10:08:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20937
EWS
Comment 3
2023-11-28 05:42:43 PST
Committed
271202@main
(d04e83740124): <
https://commits.webkit.org/271202@main
> Reviewed commits have been landed. Closing PR #20937 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug